--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,9 @@
 name: DGuard
 author: qPexLegendary
-version: 2.0.0
+version: 3.0.0
 api: 1.0.8
 main: ru.dragonestia.dguard.DGuard
 load: STARTUP
+depend:
+  - FormAPI
+  - IronLib
