--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,15 @@
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <developers>
+        <developer>
+            <name>Andrew Terentev</name>
+            <url>github.com/qPexLegendary</url>
+        </developer>
+    </developers>
 
     <repositories>
         <repository>
@@ -24,6 +32,13 @@
             <groupId>cn.nukkit</groupId>
             <artifactId>nukkit</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
