--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: DGuard
-author: qPexLegendary
-version: 2.2
-api: 1.0.8
+author: ScarletRedMan
+version: 3.0
+api: 2.0.0
 main: ru.dragonestia.dguard.DGuard
 load: STARTUP
 depend:
