--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: DGuard
-author: ScarletRedMan
+name: Private
+author: sleepingmag
 version: 3.0
 api: 2.0.0
 main: ru.dragonestia.dguard.DGuard
